Fix side menu on mobile

--- a/app/[locale]/globals.css
+++ b/app/[locale]/globals.css
@@ -36,6 +36,10 @@
   }
 }
 
+html, body {
+  overflow-x: hidden;
+}
+
 body {
   background: var(--color-background);
   color: var(--foreground);
